Fix dropdown border issue in main.css

--- a/src/main.css
+++ b/src/main.css
@@ -113,7 +113,7 @@ code {
     font-size: 1rem;
     text-align: center;
     color: #333;
-    border: px solid #aaa;
+    border: 1px solid #aaa;
     border-radius: 5px;
     appearance: none;
     background-color: #fff;
